# gdm

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  coverage.json  gdm.json  project.godot  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  checks.yml  ci.yml  coverage.yml  merge.yml  release.yml
bruno/: GET Asset by id.bru  GET Asset edit by asset id.bru  GET Asset edit by edit id.bru  GET assets.bru  bruno.json
docs/: README.md  build.md  gdm.json  generate_gifs.sh  project.godot
docs/vhs/: gdm_add.tape  gdm_add_git.tape  gdm_install.tape  gdm_intro.tape  gdm_outdated.tape  gdm_remove.tape  gdm_search.tape  gdm_update.tape
rest/: get_asset_by_id.rest  get_asset_edit_by_asset_id.rest  get_asset_edit_by_edit_id.rest  get_assets.rest
src/: main.rs
src/api/: asset.rs  asset_edit_list_response.rs  asset_edit_response.rs  asset_list_response.rs  asset_response.rs  mod.rs
src/app_config/: mod.rs
src/commands/: add.rs  install.rs  mod.rs  outdated.rs  remove.rs  search.rs  update.rs
src/config/: app.rs  gdm.rs  godot.rs  mod.rs
src/extract/: mod.rs
src/extract_service/: mod.rs
src/file_service/: cache.rs  mod.rs
src/git_service/: mod.rs
src/godot_config/: mod.rs  parser.rs
src/godot_config_repository/: godot_config.rs  mod.rs
src/http_client/: mod.rs
src/installers/: asset_lib.rs  git.rs  mod.rs  traits.rs
src/models/: mod.rs  plugin.rs
src/operation_manager/: mod.rs  operation.rs
src/parser/: mod.rs
src/plugin_config/: mod.rs
src/plugin_config_repository/: mod.rs  plugin.rs  plugin_config.rs
src/plugin_service/: asset_library_installer.rs  command.rs  git_installer.rs  mod.rs  mod_tests.rs  operation.rs  operation_manager.rs  plugin_installer.rs
src/services/: extract.rs  file.rs  git.rs  http.rs  install.rs  mod.rs  plugin.rs  plugin_parser.rs  staging.rs
src/settings/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
test/mocks/: gdm_with_plugins.json  project_with_old_config.godot  project_with_plugins_and_version.godot  project_with_plugins_and_version_new_plugin_expected.godot  project_with_plugins_and_version_plugins_removed_expected.godot  project_with_unsupported_config.godot  project_without_plugins.godot  project_without_plugins_expected.godot
tests/: README.md  add_command_tests.rs  cli_basic_tests.rs  install_command_tests.rs  outdated_command_tests.rs  remove_command_tests.rs  search_command_tests.rs  update_command_tests.rs
tests/common/: mod.rs
tests/mocks/: gdm.json  gdm_test_1.json  project_with_old_config.godot  project_without_plugins.godot  project_without_plugins_expected.godot
tests/setup/: mod.rs
vhs/: gdm_add.tape  gdm_install.tape  gdm_outdated.tape  gdm_remove.tape  gdm_search.webm  gdm_update.tape
