[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[package]
name = "gdm"
version = "1.0.1"
edition = "2024"
description = "A CLI tool to manage Godot addons"
authors = ["Jani Koponen"]
rust-version = "1.91.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive", "error-context", "help", "std", "usage"], default-features = false }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
futures = "0.3.31"
indicatif = "0.18.3"
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
strsim = "0.11.1"
tokio = { version = "1.48.0", default-features = false, features = ["fs", "macros", "rt", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20",  default-features = false, features = ["env-filter", "std", "fmt"] }
url = "2.5.7"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.1.1"
http = "1.3.1"
mockall = "0.13.1"
mockall_double = "0.3.1"
predicates = "3.1"
serial_test = "3.2.0"
temp-dir = "0.1.16"
