[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[package]
name = "gdm"
version = "1.2.0"
edition = "2024"
description = "A CLI tool to manage Godot addons"
authors = ["Jani Koponen"]
rust-version = "1.91.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive", "error-context", "help", "std", "usage"], default-features = false }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
futures = "0.3.31"
gix = { version = "0.77.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "progress-tree"] }
indicatif = "0.18.3"
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
reqwest = { version = "0.13.1", features = ["json"], default-features = false }
semver = "1.0.27"
serde = { version = "1.0.228", default-features = false }
serde_derive = { version = "1.0.228", default-features = false }
serde_json = "1.0.149"
strsim = "0.11.1"
tokio = { version = "1.49.0", default-features = false, features = ["fs", "macros", "rt", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22",  default-features = false, features = ["env-filter", "std", "fmt"] }
url = "2.5.8"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.1.1"
http = "1.4.0"
mockall = "0.14.0"
mockall_double = "0.3.1"
predicates = "3.1"
serial_test = "3.3.1"
temp-dir = "0.1.16"
